# codecrafters-dns-server-rust

./: Cargo.toml  README.md
.codecrafters/: compile.sh
benches/: my_benchmark.rs
src/: dns_protocol.rs  dns_server.rs  lib.rs  main.rs
src/dns_protocol/: dns_header.rs  dns_question.rs  dns_resource_record.rs
src/dns_server/: dns_field_codes.rs  server.rs  udp_data.rs
