[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bitfield = "0.18.1"
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.28", features = ["derive"] }
rkyv = "=0.8.9"
thiserror = "1.0.38"                             # error handling

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
